[project]
name = "mm-comfyui-loopback"
description = "Nodes:Loop, LoopStart, LoopEnd, LoopStart_SEGIMAGE, LoopEnd_SEGIMAGE"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/meshmesh-io/mm-comfyui-loopback"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "mm-comfyui-loopback"
Icon = ""
